backup/backup-default/svc.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"api-service","namespace":"default"},"spec":{"ports":[{"nodePort":30080,"port":80,"protocol":"TCP","targetPort":8080}],"selector":{"app":"synergychat-api"},"type":"NodePort"}}
    creationTimestamp: "2025-05-30T10:09:23Z"
    name: api-service
    namespace: default
    resourceVersion: "44823"
    uid: 028ae1f0-994e-4dff-977e-45058c462ec5
  spec:
    clusterIP: 10.100.206.25
    clusterIPs:
    - 10.100.206.25
    externalTrafficPolicy: Cluster
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - nodePort: 30080
      port: 80
      protocol: TCP
      targetPort: 8080
    selector:
      app: synergychat-api
    sessionAffinity: None
    type: NodePort
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: "2025-05-26T17:15:30Z"
    labels:
      component: apiserver
      provider: kubernetes
    name: kubernetes
    namespace: default
    resourceVersion: "205"
    uid: f765906b-38b8-487c-8a8d-42a239bb8630
  spec:
    clusterIP: 10.96.0.1
    clusterIPs:
    - 10.96.0.1
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 8443
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"web-service","namespace":"default"},"spec":{"ports":[{"port":80,"protocol":"TCP","targetPort":8080}],"selector":{"app":"synergychat-web"}}}
    creationTimestamp: "2025-05-29T21:42:02Z"
    name: web-service
    namespace: default
    resourceVersion: "38824"
    uid: 80b0b429-0dc7-4a5d-8251-9df2f4f75f6a
  spec:
    clusterIP: 10.110.75.106
    clusterIPs:
    - 10.110.75.106
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
    selector:
      app: synergychat-web
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
